alignment fixes for mobile

--- a/css/style.css
+++ b/css/style.css
@@ -504,7 +504,7 @@ color:#999;
     }
     section
     {
-        padding:100px 50px;
+        padding:10px 50px;
     }
     .banner
     {
